--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,41 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #333;
+  }
+  
+  h1, h2, h3, h4, h5, h6 {
+    font-weight: 500;
+    margin-bottom: 0.5em;
+  }
+  
+  h1 {
+    font-size: 2.5em;
+  }
+  
+  h2 {
+    font-size: 2em;
+  }
+  
+  h3 {
+    font-size: 1.75em;
+  }
+  
+  h4 {
+    font-size: 1.5em;
+  }
+  
+  p {
+    margin-bottom: 1em;
+  }
+  
+  button {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+  }
+  
+  input, textarea, select {
+    font-family: 'Roboto', sans-serif;
+    font-size: 1em;
+  }
