--- a/src/app/product-form/product-form.component.css
+++ b/src/app/product-form/product-form.component.css
@@ -11,6 +11,12 @@ form {
   input, textarea {
     width: 100%;
     padding: 5px;
+    border-radius: 3px;
+    outline: none;
+    border: 1px solid #ccc;
+  }
+  textarea {
+    resize: none;
   }
   
   button {
@@ -19,8 +25,25 @@ form {
     padding: 10px;
     border: none;
     cursor: pointer;
+    width: 100%;
+    border-radius: 3px;
+    font-family: 'Montserrat', sans-serif; 
   }
   
   button:hover {
     background-color: #45a049;
+  }
+  .error-message {
+    color: red;
+    font-size: 0.8em;
+    margin-top: 5px;
+  }
+  
+  input.ng-invalid.ng-touched, textarea.ng-invalid.ng-touched {
+    border: 1px solid red;
+  }
+  
+  button[disabled] {
+    background-color: #cccccc;
+    cursor: not-allowed;
   }
