--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -1,11 +1,11 @@
 .product-management {
     display: flex;
-    margin: 0 auto;
+    margin: 50px 20px;
+    gap: 50px;
   }
   
   .product-form {
     flex: 1;
-    padding-right: 20px;
   }
   
   .product-grid {
