--- a/src/app/product-list/product/product.component.css
+++ b/src/app/product-list/product/product.component.css
@@ -1,5 +1,4 @@
 .product {
-    border: 1px solid #ddd;
     padding: 10px;
     border-radius: 5px;
     height: 100%;
@@ -24,6 +23,10 @@
     border: none;
     cursor: pointer;
     margin-bottom: 30px;
+    font-size: 0.9em;
+    font-weight: 500;
+    letter-spacing: 0.5px;
+    border-radius: 3px;
   }
   
   button:hover {
@@ -37,16 +40,32 @@
     font-size: 1.2em;
     font-weight: 500;
     margin-bottom: 0.5em;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-height: 3em; /* Giới hạn chiều cao cho 2 dòng */
+    line-height: 1.5em; /* Dòng cao 1.5em */
   }
   
   .product p {
     font-size: 0.9em;
     color: #666;
   }
-  
-  button {
-    font-size: 0.9em;
-    font-weight: 500;
-    text-transform: uppercase;
-    letter-spacing: 0.5px;
-  }
+.product-image{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.no-image {
+  width: 150px;
+  height: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f0f0f0;
+  color: #666;
+  font-size: 0.9em;
+  text-align: center;
+}
